--- a/templates/base.html
+++ b/templates/base.html
@@ -86,6 +86,7 @@
                                   <a href="{% url 'add_wine' %}" class="dropdown-item">Wine Management</a>
                               {% endif %}
                               <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                              <a href="{% url 'wishlist' %}" class="dropdown-item">My Wishlist</a>
                               <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                           {% else %}
                               <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
