--- a/home/templates/home/404.html
+++ b/home/templates/home/404.html
@@ -3,7 +3,7 @@
 {% block extra_title%} | Error: Page Not Found{% endblock %}
 
 {% block content %}
-    <div class="row vh-100">
+    <div class="overlay row vh-100">
         <div class="col d-flex flex-column justify-content-center align-items-center">            
             <h1 class="">OOPS!</h1>
             <h2 class="">404 - Page Not Found</h2> 
