--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -7,7 +7,7 @@
 {% block inner_content %}
 <hr>
 <h2 class="mt-5 logo-font mb-4">{% trans "Sign Up" %}
-  For faster checkout, to creat wishlists, and view your order history
+  For faster checkout, to create wishlists, and view your order history
 </h2>
 <hr>
 
